# rag-knowledge-assistant

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  rag.py  store.py
data/: sample.txt
tests/: test_api.py  test_rag.py
