[project]
name = "rag-knowledge-assistant"
version = "1.0.0"
description = "Retrieval-Augmented Generation over your own documents, as a REST API and CLI, with an offline fallback."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Ruff's default rules (pyflakes + a subset of pycodestyle) plus import sorting.
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
